# Chess

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: Game.h  config.h.in
src/: Game.cpp  main.cpp
